# pyapp

./: .gitignore  Makefile  README.md  poetry.toml  pyproject.toml
pyapp/: manage.py
pyapp/functional_tests/: test_user_login.py
pyapp/iam_app/: asgi.py  settings.py  urls.py  wsgi.py
pyapp/users/: decorators.py  urls.py  views.py
pyapp/users/forms/: __init__.py  user_login_form.py  user_registration_form.py
pyapp/users/templates/users/: homepage.html  login.html  logout.html  register.html  secret_area.html
pyapp/users/tests/: test_user_forms.py  test_user_views.py
