[tool.poetry]
name = "pyapp"
version = "0.1.0"
description = ""
authors = ["razvan.blaga <razvan.paul.blaga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
django-allauth = "^0.51.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
black = "^22.10.0"
ipython = "^8.6.0"
pytest = "^7.2.0"
selenium = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
